--- a/css/templatePart/composants.css
+++ b/css/templatePart/composants.css
@@ -41,14 +41,27 @@
     width: 90%;
     box-shadow: 10px 10px rgb(228, 225, 225);
     margin-bottom: 1rem;
+    filter: contrast(75%);
 }
 .imageDisplay p{
     width: 88%;
 }
+.separator2 {
+    height: 2px;
+    width: 20px;
+    background-color: var(--color-cta);
+}
 
-
-
-
+.liste {
+    display: flex;
+    flex-direction: column;
+}
+.listeLigne{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 2rem;
+}
 
 .textDisplayLeft{
     display: flex;
@@ -71,6 +84,6 @@
 }
 @media (max-width: 650px) {
     .imageDisplay {
-        width: 80%;
+        width: 90%;
     }
 }
