--- a/css/pages/projects.css
+++ b/css/pages/projects.css
@@ -6,4 +6,48 @@
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url(./css/image/project-background.jpg);
     background-size: auto;
+    height: 570px;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    justify-content: center;
+    width: 75%;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+#titre {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+section article{
+    display:flex;
+    justify-content: space-between;
+}
+section article img{
+    width: 32%;
+    border-radius: 5px;
+}
+@media (max-width: 650px) {
+        header {
+                height: 30vh;
+                background-size: 200%;
+            }
+        
+            header section {
+                gap: 0.5rem;
+            }
+        
+            header h1 {
+                text-align: center;
+                font-size: 2rem;
+            }
 }
