--- a/css/pages/burger.css
+++ b/css/pages/burger.css
@@ -1,4 +1,4 @@
-@import "./css/charteGraphique.css";
+@import "../templatePart/charteGraphique.css";
 @import "../templatePart/composants.css";
 @import "../templatePart/header.css";
 
