--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,9 +1,10 @@
-@import "./css/charteGraphique.css";
+@import "../templatePart/charteGraphique.css";
 @import "../templatePart/composants.css";
 @import "../templatePart/header.css";
 @import "../templatePart/footer.css";
 
 header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(../image/bg/hero-bg.jpg);
     height:90vh
 }
 
@@ -65,7 +66,7 @@ header{
 
  #exploreTheWorld{
     display: flex;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(./css/image/section-bg-img.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(../image/home/section-bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     height: 65vh;
