--- a/css/templatePart/charteGraphique.css
+++ b/css/templatePart/charteGraphique.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
+@font-face {
+    font-family: "Montserrat";
+    src: url(../font/Montserrat-VariableFont_wght.ttf);
+}
+@font-face {
+    font-family: "Noto Sans";
+    src: url(../font/NotoSans-VariableFont_wdth\,wght.ttf);
+}
 
 
 
