--- a/css/pages/about.css
+++ b/css/pages/about.css
@@ -1,12 +1,10 @@
 @import "../templatePart/charteGraphique.css";
 @import "../templatePart/composants.css";
-@import "../templatePart/header.css";
+@import "../templatePart/headerOtherPages.css";
 @import "../templatePart/footer.css";
 
 header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url(../image/bg/about-bg.jpg);
-    background-size: auto;
-    height: 570px ;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url(../image/bg/aboutBg.jpg);
     }
 main {
     padding-bottom: 5vh;
@@ -40,19 +38,6 @@ section img{
     }
 }
 @media (max-width: 650px) {
-    header {
-        height: 30vh;
-        background-size: 200%;
-    }
-
-    header section {
-        gap: 0.5rem;
-    }
-
-    header h1 {
-        text-align: center;
-        font-size: 2rem;
-    }
     section{
         padding: 10vh 3vh 5vh 3vh;
     }
