--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,12 +1,8 @@
 @import "../templatePart/charteGraphique.css";
 @import "../templatePart/composants.css";
-@import "../templatePart/header.css";
+@import "../templatePart/headerHome.css";
 @import "../templatePart/footer.css";
 
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(../image/bg/hero-bg.jpg);
-    height:90vh
-}
 
 /* Section citation */
 
@@ -55,18 +51,18 @@ header{
 #upcomingEvents > :nth-child(2) {
     margin-bottom: 1.5rem;
 }
-#events{
+#upcomingEvents article{
     display: flex;
     gap: 3rem;
     justify-content: center;
     align-items: center;
 }
 
-/* Section Explore The World */
+/* CTA pour rediriger vers une autre page */
 
  #exploreTheWorld{
     display: flex;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(../image/home/section-bg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.58)), url(../image/home/sectionBg.jpg);
     background-size: cover;
     background-attachment: fixed;
     height: 65vh;
@@ -75,9 +71,9 @@ header{
 
 #exploreTheWorld div p{
     width: 70%;
-
+    
 }
-#cell2{
+#exploreTheWorld > div{
     width: 50%;
 }
 .textDisplayLeft{
@@ -94,7 +90,7 @@ header{
     padding-bottom: 10vh;
     flex-wrap: wrap;
 }
-#toursSection{
+#tourSectionFlex article {
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
@@ -102,71 +98,67 @@ header{
     width: 66%;
 }
 
-#tourSection > div{
-    width: 19rem;
+#tourSectionFlex article > div{
+    width: 30%;
 }
-
-.imageHome{
-    display: flex;
-    flex-direction: column;
-    width: 23rem;
-    gap: 1rem;
-}
-.imageHome img{
-    border-radius: 5px;
-}
-
-#textDisplayHome{
+#tourSectionFlex article > div:first-of-type{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     gap: 2rem;
-    width: 23rem;
 }
+
+.imageHome{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.imageHome img{
+    border-radius: 5px;
+    max-width: 100%;
+}
+
 
 @media(max-width: 1200px) {
 
     /* Section prochains évènements */
 
-    #events{
+    #upcomingEvents article{
         flex-direction: column;
         gap: 2rem;
         width: 100%;
     }
 
     /* Section Explore The World */
-
-    #cell2 {
+    #exploreTheWorld {
+        justify-content: center;
+    }
+    #exploreTheWorld div {
          display: none;
     }
     .textDisplayLeft{
-        width: 100%;
+        width: 90%;
     }
 
     /* Section Prochaines destinations */
-
-    #toursSection{
+    #tourSectionFlex {
+        justify-content: center;
+        align-items: center;
+    }
+    #tourSectionFlex article{
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        width: 80%;
+    }
         
+    #tourSectionFlex article > div {
+        width: 100%;
     }
 
 }
 @media (max-width: 650px){
-
-    header {
-        height: 60vh;
-    }
-    
-    header section {
-        gap: 0.5rem;
-    }
-    
-    header h1 {
-        text-align: center;
-        font-size: 2rem;
-    }
 
     /* Section citation */
 
