--- a/css/pages/services.css
+++ b/css/pages/services.css
@@ -1,12 +1,10 @@
 @import "../templatePart/charteGraphique.css";
 @import "../templatePart/composants.css";
-@import "../templatePart/header.css";
+@import "../templatePart/headerOtherPages.css";
 @import "../templatePart/footer.css";
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url(../image/bg/services-bg.jpg);
-    background-size: auto;
-    height: 570px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3)), url(../image/bg/servicesBg.jpg);
 }
 main{
     display: flex;
@@ -69,19 +67,6 @@ main{
 
 }
 @media (max-width: 650px) {
-    header {
-        height: 30vh;
-        background-size: 200%;
-    }
-
-    header section {
-        gap: 0.5rem;
-    }
-
-    header h1 {
-        text-align: center;
-        font-size: 2rem;
-    }
     main{
         padding: 5vh;
     }
