--- a/css/pages/contact.css
+++ b/css/pages/contact.css
@@ -48,11 +48,12 @@ form{
 @media (max-width: 650px) {
     main{
         flex-direction: column;
+        padding: 0;
+        align-items: center;
     }
 
-    section{
-        width: 100%;
-        padding: 0;
+    main section{
+        width: 80%;
         padding-bottom: 10vh;
     }
 }
