--- a/css/pages/about.css
+++ b/css/pages/about.css
@@ -13,7 +13,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10vh;
+    gap: var(--section-padding);
     padding: 10vh 10vh 5vh 10vh;
 
 }
