--- a/css/templatePart/charteGraphique.css
+++ b/css/templatePart/charteGraphique.css
@@ -14,6 +14,8 @@
 :root{
     --font-nav: "Montserrat", sans-serif;
     --font-body: "Noto Sans", sans-serif;
+
+    --section-padding: 10vh;
 }
 
 * {
