--- a/css/templatePart/headerOtherPages.css
+++ b/css/templatePart/headerOtherPages.css
@@ -65,7 +65,7 @@ header h3{
     color: #ffffff;
 }
 
-.burger-menu {
+.burgerMenu {
     display: none;
     font-size: 2rem;
     color: #ffffff;
@@ -77,7 +77,7 @@ header h3{
 
 .burgerNav {
     display: none;
-    gap: 1rem;
+    gap: 0.8rem;
     top: 5rem;
     right: 0;
     position: absolute;
@@ -94,7 +94,7 @@ header h3{
     header nav ul{
         display: none;
     }
-    .burger-menu {
+    .burgerMenu {
         display: block;
     }
     .burgerNavOuvert {
