--- a/css/pages/services.css
+++ b/css/pages/services.css
@@ -33,7 +33,7 @@ main{
     justify-content: space-around;
 }
 
-#listes {
+#list {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -55,7 +55,7 @@ main{
         width: 100%;
         align-items: center;
     }
-    #listes{
+    #list{
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
